# inboxzero

./: .gitignore  Dockerfile  PRD.md  README.md  config.toml.example  pyproject.toml
.claude/: settings.local.json
docs/: feature-configurable-labels-and-implicit-learning.md
mailfiler/: __init__.py  cli.py  config.py  daemon.py  models.py
mailfiler/db/: __init__.py  queries.py  schema.py
mailfiler/feedback/: __init__.py  corrections.py
mailfiler/mail/: __init__.py  actions.py  body.py  gmail_auth.py  gmail_client.py  protocol.py
mailfiler/pipeline/: __init__.py  cache.py  heuristics.py  learning.py  llm.py  processor.py
tests/: conftest.py  fakes.py  test_anthropic_provider.py  test_body.py  test_cache.py  test_cli.py  test_config.py  test_corrections.py  test_daemon.py  test_db.py  test_gmail_auth.py  test_gmail_client.py  test_heuristics.py  test_integration.py  test_learning.py  test_llm.py  test_lmstudio_provider.py  test_mail_client.py  test_models.py  test_processor.py  test_reprocess.py
tests/fixtures/: sample_emails.json
